Wed Dec 06 04:49:27 2000  George Lebl <jirka@5z.com>

	* gnome-mdi.c: correctly get default return values for emitting
	  signals by using g_signal_emitv directly.  Also fix a precondition
	  on remove_view.

Wed Dec 06 02:57:06 2000  George Lebl <jirka@5z.com>

	* gnome-animator.c: check for nulls.  If no current frame draw black.

Wed Dec 06 01:55:24 2000  George Lebl <jirka@5z.com>

	* gnome-animamtor.c, gnome-canvas.c, gnome-dock-band.c, 
	  gnome-dock-item.c, gnome-dock.c, gnome-druid-page.c,
	  gnome-druid.c, gnome-roo.c, gnome-textfu.c, gtkpixmapmenuitem.c,
	  wap-textfu.c:  There is no draw signal/method anymore, it's
	  all handled by exposes now so all the draw stuff is now gone.

2000-12-05  Martin Baulig  <baulig@suse.de>

	* gnome-selectorP.h (_gnome_selector_async_handle_removed): Renamed
	to _gnome_selector_async_handle_destroy().
	(_gnome_selector_async_handle_removed): New internal function, does
	the opposite of _gnome_selector_async_handle_add().
	(_gnome_selector_async_handle_completed): Don't call the callback
	function here, only mark the async handler as completed and call
	_gnome_selector_async_handle_destroy() if there are no pending sub-
	operations.

2000-12-04  Martin Baulig  <baulig@suse.de>

	Started to make GnomeSelector fully asynchronous.

	* gnome-boxed.defs (GnomeSelectorAsyncHandle): Added.

	* gnome-selector.h (GnomeSelectorAsyncHandle): New type.
	(GnomeSelectorAsyncType, GnomeSelectorAsyncFunc): New types.
	(GnomeSelector): Changed the return type of the "check_filename"
	and "check_directory" signals to void; added additional
	GnomeSelectorAsyncHandle parameter to the "check_filename",
	"check_directory", "add_file" and "add_file_default", "add_directory"
	and "add_directory_default" signals; removed the "do_add_*" signals.
	(gnome_selector_check_filename, gnome_selector_check_directory,
	gnome_selector_add_file, gnome_selector_add_directory): Changed return
	type to void; added three new arguments for async handling.